fix height overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,6 @@ html,body{
     padding:0;
     margin:0;
 }
-#wrapper{
-    padding:1rem;
-}
 
 button,a.btn{
     background:#69f;
